--- a/src/main/resources/views/home.fxml
+++ b/src/main/resources/views/home.fxml
@@ -86,7 +86,6 @@
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         </rowConstraints>
         <VBox.margin>
             <Insets top="50.0"/>
@@ -101,22 +100,32 @@
                 <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
             </GridPane.margin>
         </Label>
-        <Label text="Average Speed" textFill="#c8c8c8" GridPane.rowIndex="1">
+        <Label text="Average Speed" textFill="#c8c8c8" GridPane.columnIndex="2">
             <GridPane.margin>
                 <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
             </GridPane.margin>
         </Label>
-        <Label fx:id="avgSpeed" text="0" textFill="#c8c8c8" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <Label fx:id="avgSpeed" text="0 fields per tick" textFill="#c8c8c8" GridPane.columnIndex="3">
             <GridPane.margin>
                 <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
             </GridPane.margin>
         </Label>
-        <Label text="Ticks passed" textFill="#c8c8c8" GridPane.rowIndex="2">
+        <Label text="Ticks passed" textFill="#c8c8c8" GridPane.rowIndex="1">
             <GridPane.margin>
                 <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
             </GridPane.margin>
         </Label>
-        <Label fx:id="ticksPassed" text="0" textFill="#c8c8c8" GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <Label fx:id="ticksPassed" text="0" textFill="#c8c8c8" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane.margin>
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+            </GridPane.margin>
+        </Label>
+        <Label text="Maximum speed" textFill="#c8c8c8" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <GridPane.margin>
+                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+            </GridPane.margin>
+        </Label>
+        <Label text="6 fields per tick" textFill="#c8c8c8" GridPane.columnIndex="3" GridPane.rowIndex="1">
             <GridPane.margin>
                 <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
             </GridPane.margin>
